--- a/main.html
+++ b/main.html
@@ -8,8 +8,15 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+   <form method = "post">
+	    <label for=name>Name</label>
+	<input type=text id=name minlength="3" maxlength="50" /></br>	
+	    <label for=portfolio>Portfolio</label>
+	<input type=URL id=portfolio  /></br>
+	    <label for=name>Favourite Color</label>
+	<input type=Color id=favColor  /></br>
+	    <label for=likeness>Likeness</label>
+	<input type=Range id=likeness min="1" max="100" /></br>
 
 </body>
 
