--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 	<input type=Color id=favColor  /></br>
 	    <label for=likeness>Likeness</label>
 	<input type=Range id=likeness min="1" max="100" /></br>
-
+   </form>
 </body>
 
 </html>
