--- a/main.html
+++ b/main.html
@@ -18,6 +18,8 @@
 	    <label for=likeness>Likeness</label>
 	<input type=Range id=likeness min="1" max="100" /></br>
    </form>
+	 <script type="text/javascript" src="./script.js">
+</script>
 </body>
 
 </html>
