--- a/main.html
+++ b/main.html
@@ -8,18 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-   <form method = "post">
-	    <label for=name>Name</label>
-	<input type=text id=name minlength="3" maxlength="50" /></br>	
-	    <label for=portfolio>Portfolio</label>
-	<input type=URL id=portfolio  /></br>
-	    <label for=name>Favourite Color</label>
-	<input type=Color id=favColor  /></br>
-	    <label for=likeness>Likeness</label>
+   <h1>Feedback Form</h1>
+	<form action = "#" method = "post">
+	    <label for=name>Name</label><br>
+	<input type=text id=name minlength="3" maxlength="50" required></br>	
+	    <label for=portfolio>Portfolio</label><br>
+	<input type=URL id=portfolio  required></br>
+	    <label for=favColor>Favourite Color</label><br>
+	<input type=Color id=favColor  N/A ></br>
+	    <label for=likeness>Likeness</label<br>
 	<input type=Range id=likeness min="1" max="100" /></br>
    </form>
-	 <script type="text/javascript" src="./script.js">
-</script>
+	
 </body>
 
 </html>
